<resources>
	<string name="app_name">Ping Servers</string>
	<string name="developer_email">kevin@broh-kahn.com</string>
	<string name="developer_name">Kevin Broh-Kahn</string>
	<!--<string name="service_running_label_off">Not pinging any server.</string>-->
	<!--<string name="service_running_label_success">Successfully pinged %1$s at %2$s UTC</string>-->
	<!--<string name="service_running_label_fail">Unable to ping %1$s at %2$s UTC</string>-->
	<!--<string name="delay_text_view_1">Ping every </string>-->
	<!--<string name="delay_text_view_2"> minutes</string>-->
	<!--<string name="update_result_button_text">Refresh status</string>-->
	<string name="save">Save</string>
	<string name="cancel">Cancel</string>
	<string name="deactivate">Deactivate</string>
	<string name="frequency">Frequency</string>
	<string name="retries">Retries</string>
	<string name="general">General</string>

	<!-- Actions and activities -->
	<string name="action_view_pings">View all pings</string>
	<string name="action_refresh_pings">Ping now</string>
	<string name="action_view_on_web">View on web</string>
	<string name="action_view_logs">View logs</string>
	<string name="activity_add_ping">Add Ping</string>
	<string name="activity_about">About</string>
	<string name="activity_settings">Settings</string>
	<string name="title_activity_settings">Settings</string>

	<!-- Notification -->
	<string name="notification_title">Ping failed!</string>
	<string name="notification_text">Failed to ping server %1$s</string>

	<!-- Add server -->
	<string name="server_text_view">Enter server to ping:</string>
	<string name="server_hint">kevin.broh-kahn.com</string>

	<!-- Deactivate server -->
	<string name="deactivate_title">Stop pinging server</string>
	<string name="deactivate_message">Do you want to stop pinging %1$s?</string>
	<string name="deactivate_positive">Yes, stop</string>
	<string name="deactivate_negative">No, continue</string>

	<!-- Save server -->
	<string name="save_title">Save server</string>
	<string name="save_message">Do you want to save and start pinging %1$s?</string>
	<string name="save_positive">Save</string>
	<string name="save_negative">Discard</string>

	<!-- About -->
	<string name="about_package_text">Package %1$s</string>
	<string name="about_version_text">Version %1$s</string>
	<string name="about_developer_text">Developed by %1$s</string>
	<string name="about_app_text">Please do not hesitate to send any feedback or questions to %1$s!</string>


	<!-- Settings -->
	<!--<string name="server_key">server</string>-->
	<string name="key_strict_alarm">strictAlarms</string>
	<string name="key_delay">delay</string>
	<string name="key_timeout">timeout</string>
	<string name="key_retries">retries</string>
	<string name="key_retries_delay">retriesDelay</string>
	<string name="key_date_format">dateFormat</string>
	<string name="key_use_schedule">useSchedule</string>
	<string name="key_schedule_start_time">scheduleStartTime</string>
	<string name="key_schedule_end_time">scheduleEndTime</string>
	<string name="key_notify_subsequent_failures">notifySubsequentFailures</string>

	<string name="title_strict_alarms">Use strict alarms</string>
	<string name="title_delay">Ping frequency (minutes)</string>
	<string name="title_timeout_delay">Timeout (seconds)</string>
	<string name="title_delay_inaccurate">Note: frequency not exact</string>
	<string name="title_retries">Retries before failure</string>
	<string name="title_retry_delay">Delay before retry (seconds)</string>
	<string name="title_date_format">Date format</string>
	<string name="title_use_schedule">Use schedule</string>
	<string name="title_schedule_start_time">Schedule start time</string>
	<string name="title_schedule_end_time">Schedule end time</string>
	<string name="title_notify_subsequent_failures">Notify of subsequent failures</string>

	<string name="default_date_format">MM/dd/yyyy HH:mm</string>
	<string name="default_schedule_start_time">0600</string>
	<string name="default_schedule_end_time">1900</string>

	<string name="summary_strict_alarm">Requires frequent device wakeups</string>
	<string name="summary_delay_inaccurate">Android devices control timers differently, if pings aren\'t occurring
		at the above frequency try changing it by 20%.</string>
	<string name="summary_notify_subsequent_failures">When off, only notify when a ping fails immediately after a
		success</string>

</resources>
