<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

	<PreferenceCategory android:title="@string/frequency">

		<EditTextPreference
				android:defaultValue="5"
				android:inputType="number"
				android:key="@string/key_delay"
				android:maxLines="1"
				android:selectAllOnFocus="true"
				android:singleLine="true"
				android:title="@string/title_delay"/>
		<Preference
				android:summary="@string/summary_delay_inaccurate"
				android:title="@string/title_delay_inaccurate"/>

		<EditTextPreference
				android:defaultValue="1"
				android:inputType="number"
				android:key="@string/key_timeout"
				android:maxLines="1"
				android:selectAllOnFocus="true"
				android:singleLine="true"
				android:title="@string/key_timeout"/>
	</PreferenceCategory>

	<PreferenceCategory android:title="@string/retries">
		<EditTextPreference
				android:defaultValue="3"
				android:inputType="number"
				android:key="@string/key_retries"
				android:maxLines="1"
				android:selectAllOnFocus="true"
				android:singleLine="true"
				android:title="@string/title_retries"/>
		<EditTextPreference
				android:defaultValue="1"
				android:inputType="number"
				android:key="@string/key_retries_delay"
				android:maxLines="1"
				android:selectAllOnFocus="true"
				android:singleLine="true"
				android:title="@string/title_retry_delay"/>
	</PreferenceCategory>
</PreferenceScreen>
