<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
	  xmlns:app="http://schemas.android.com/apk/res-auto">

	<item
			android:id="@+id/action_refresh_pings"
			android:icon="@drawable/ic_cached_white_24dp"
			android:title="@string/action_refresh_pings"
			app:showAsAction="ifRoom"/>

	<item
			android:id="@+id/action_view_pings"
			android:title="@string/action_view_pings"
			app:showAsAction="never"/>
	<item
			android:id="@+id/action_view_logs"
			android:title="@string/action_view_logs"
			app:showAsAction="never"/>
	<item
			android:id="@+id/action_about"
			android:title="@string/activity_about"
			app:showAsAction="never"/>
	<item
			android:id="@+id/action_settings"
			android:title="@string/activity_settings"
			app:showAsAction="never"/>

</menu>